src/test/ui/parser/issue-33455.stderr
error: expected one of `::`, `;`, or `as`, found `.`
  --> $DIR/issue-33455.rs:3:8
   |
LL | use foo.bar; //~ ERROR expected one of `::`, `;`, or `as`, found `.`
   |        ^ expected one of `::`, `;`, or `as` here

error: aborting due to previous error

